@@ -12,9 +12,7 @@ import java.io.File;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-import java.util.stream.Stream;
 
 public class ExamsWindow extends AbstractWindow {
     private User user;
@@ -33,22 +31,28 @@ public class ExamsWindow extends AbstractWindow {
         objectMapper.enable(SerializationFeature.INDENT_OUTPUT);
 
         File file = new File("Exams.json");
+
         List<Exam> exams = objectMapper.readValue(file, new TypeReference<>() {
         });
 
+        List<Exam> examsToTake = getUsersExamsToTake(user, user.getUserType(), exams);
+
+        if(examsToTake.size()==0){
+            System.out.println("Galimų laikyti egzaminų sąrašas tuščias.");
+            Thread.sleep(3000);
+            StudentWindow studentWindow = new StudentWindow(userType, user);
+            studentWindow.window();
+        }
 
         System.out.println("Egzaminų sąrašas:");
 
-//        canTakeExam(user, UserType.STUDENT);
-
-        IntStream.range(0, exams.size())
+        IntStream.range(0, examsToTake.size())
                 .mapToObj(i -> {
-                    Exam e = exams.get(i);
+                    Exam e = examsToTake.get(i);
                     try {
                         return "[" + (i + 1) + "] Egzamino ID: " + e.getId() +
                                 ", Egzamino pavadinimas: " + e.getName() +
-                                ", Egzamino tipas: " + e.getExamType() +
-                                " ?" + canTakeExam(user, UserType.STUDENT, exams);
+                                ", Egzamino tipas: " + e.getExamType();
                     } catch (Exception ex) {
                         throw new RuntimeException(ex);
                     }
@@ -58,7 +62,7 @@ public class ExamsWindow extends AbstractWindow {
         System.out.println("\nPasirinkite egzaminą:");
 
         try {
-            Exam exam = exams.get(scanner.nextInt() - 1);
+            Exam exam = examsToTake.get(scanner.nextInt() - 1);
             if (userType.equals(UserType.STUDENT)) {
                 QuestionsWindow questionsWindow = new QuestionsWindow(exam, userType, user);
                 questionsWindow.window();
@@ -74,86 +78,23 @@ public class ExamsWindow extends AbstractWindow {
         }
     }
 
-    //    private boolean canTakeExam(Exam exam) {
-//        return !getState().getAnswer().stream()
-//                //TODO add check that time has passed 48 hours
-//                .anyMatch(examAnswers -> examAnswers.getExam().getId().equals(exam.getId()));
-//    }
-    private boolean canTakeExam(User user, UserType userType, List<Exam> exams) throws Exception {
+    private List<Exam> getUsersExamsToTake(User user, UserType userType, List<Exam> exams) throws Exception {
         OneStudentExamsResultsWindow oneStudentExamsResultsWindow = new OneStudentExamsResultsWindow(userType, user);
         List<StudentsAnswers> oneStudentsAnswerList = oneStudentExamsResultsWindow.fillOneStudentsAnswersList();
 
-//        List<LocalDateTime> examsTimesLessThan48Hours = oneStudentsAnswerList
-//                .stream()
-//                .map(exam -> LocalDateTime.parse(exam.getTime()))
-//                .filter(examTimes -> {
-//                    LocalDateTime to = LocalDateTime.now();
-//                    Duration duration = Duration.between(examTimes, to);
-//                    String time;
-//                    if (duration.toHours() < 48) {
-//                        time = examTimes.toString();
-//                    } else {
-//                        time = null;
-//                    }
-//                    return time != null;
-//                }).toList();
+        List<Exam> restrictedExams = oneStudentsAnswerList.stream()
+                .filter(a -> {
+                    LocalDateTime time = LocalDateTime.parse(a.getTime());
+                    LocalDateTime currentTime = LocalDateTime.now();
+                    long examPassedHours = Duration.between(time, currentTime).toHours();
+                    return examPassedHours < 48;
+                })
+                .map(StudentsAnswers::getExam)
+                .toList();
 
-//        List<LocalDateTime> examsTimesLessThan48Hours2 =
-       return oneStudentsAnswerList
-                .stream()
-                .anyMatch(exam -> {
-                    LocalDateTime from = LocalDateTime.parse(exam.getTime());
-                    LocalDateTime to = LocalDateTime.now();
-                    Duration duration = Duration.between(from, to);
-                    List<StudentsAnswers> newList = new ArrayList<>();
-                    if (duration.toHours() > 48){
-                        newList.add(exam);
-                    }
-
-                    List<UUID> uuid = newList.stream()
-                            .filter(id -> id.getExam().getId().equals(exam.getExam().getId())).findAny().stream().toList();
-
-                 return exams.stream().filter(i -> i.getId().equals());
-                });
-
-
-//                    else {
-//                        time = null;
-//                    }
-//                    return time != null;
-
-//        List<String> newList = oneStudentsAnswerList.stream().map(studentsAnswers -> {
-//            StudentsAnswers e = studentsAnswers;
-//            return e.getExam().getId() + e.getTime();
-//        }).toList();
-//
-//        List<Integer> result = new ArrayList<>();
-//        for (int i = 0; i < newList.size(); i++) {
-//            if (newList.stream().map(t -> newList.)
-//                    .equals(examsTimesLessThan48Hours.get(i))) {
-//                result.add(i);
-//            }
-//        }
-//
-//        result.forEach(System.out::println);
-
-//                .stream()
-//                .filter(exists -> {
-//                    List<UUID> idList = new ArrayList<>();
-//                    if(oneStudentsAnswerList.stream().map(h -> LocalDateTime.parse(h.getTime()))
-//                            .anyMatch(v -> v.equals(exists))){
-//                       idList.add(IntStream.range(0, oneStudentsAnswerList.size())
-//                                       .mapToObj(i -> {
-//                                           StudentsAnswers e = oneStudentsAnswerList.get(i);
-//                                           return e.getExam().getId();
-//                                       }).findAny().orElse(null));
-////                               oneStudentsAnswerList.stream().map(id -> id.getExam().getId()).findAny().orElse(null));
-//                    } else{
-//                        idList = null;
-//                    }
-//                    return idList != null;
-//                })
-//                .collect(Collectors.toList());
+        return exams.stream()
+                .filter(e -> restrictedExams.stream().noneMatch(re -> re.getId().equals(e.getId())))
+                .toList();
     }
 }
 
